# Planter_software

./: .clang-format  .gitignore  CMakeLists.txt  Planter_scratch.code-workspace  sdkconfig  sdkconfig-backup  sdkconfig.old
Components/Battery/: CMakeLists.txt  battery.c  battery.h
Components/ErrHandler/: CMakeLists.txt  err_handler.c  err_handler.h
Components/Main/: CMakeLists.txt  McuState.c  McuState.h  UserConfig.c  UserConfig.h  main.c  main.h
Components/Network_custom/: CMakeLists.txt
Components/Network_custom/Mqtt/: mqtt.c  mqtt.h
Components/Network_custom/WiFi/: app_wifi.c  app_wifi.h  secret_data.h
Components/Peripherals/: CMakeLists.txt
Components/Peripherals/Adc/: adc.c  adc.h
Components/Peripherals/Gpio/: gpio_user.c  gpio_user.h
Components/Peripherals/I2C/: i2c.c  i2c.h
Components/Peripherals/Timers/: GPTimers.c  GPTimers.h
Components/Sensors/: CMakeLists.txt  sensors.c  sensors.h
Components/Signaling/: CMakeLists.txt
Components/Signaling/Rgb_LED/: led.c  led.h
main/include/: adc.h  app_wifi.h  aws.h  battery.h  err_handler.h  i2c.h  led.h  main.h  mqtt.h  secret_data.h  sensors.h
main/src/: CMakeLists.txt  adc.c  app_wifi.c  aws.c  battery.c  err_handler.c  i2c.c  led.c  main.c  mqtt.c  sensors.c
tmp/: Plant_sensor01.cert.pem  Plant_sensor01.private.key  Plant_sensor01.public.key
